<resources>
    <string name="app_name">RecyclerView</string>
    <string name="fetch_data">Fetch data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flag_image_description">Falg Image Description\n</string>
    <string name="university_name">University Name</string>
    <string name="country">Country:</string>
    <string name="alpha_code">Alpha Code:</string>
    <string name="state_province">State/Province:</string>
    <string name="domains">Domains:</string>
    <string name="web_pages">Web Pages:</string>

    <string name="country_label">Country: %1$s</string>
    <string name="alpha_code_label">Alpha Code: %1$s</string>
    <string name="state_province_label">State/Province: %1$s</string>
    <string name="domains_label">Domains: %1$s</string>
    <string name="web_pages_label">Web Pages: %1$s</string>


</resources>