<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/university_item_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textUniversityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/university_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textAlphaCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alpha_code"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textStateProvince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_province"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textDomains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domains"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textWebPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/web_pages"
        android:textSize="16sp" />

</LinearLayout>
